# doc-ray

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py  serve_config.yaml
.github/workflows/: release-image.yml
app/: __init__.py  background_parsing.py  const.py  main.py  mineru_parser.py  parser.py  server.py  state_manager.py
doc_parser_service/: Dockerfile  README.md  serve_config.yaml
doc_parser_service/app/: parser.py  state_manager.py
scripts/: client.py  prepare_for_mineru.py
