[project]
name = "doc-ray"
version = "0.1.0"
description = "A document parsing service"
requires-python = ">=3.10"
dependencies = [
    "ray[serve]==2.46.0",
    "fastapi",
    "python-multipart>=0.0.20",
    "magic-pdf[full]>=1.3.5,<2.0.0",
]

[project.optional-dependencies]
misc = [
    "huggingface-hub>=0.32.0",
    "modelscope>=1.26.0",
]

[tool.uv]
# Add any uv specific configurations here if needed
# For example, if you want to specify a particular version of a tool
# tool.uv.sources = { some-package = "==1.2.3" }
